# AdaptiveAgent

./: .env.example  .gitignore  CHANGELOG.md  README.md  llm_test.py  pyproject.toml  reference.md  requirements.txt
.cursor/rules/: personas.mdc  project.mdc  python.mdc  workflow.mdc
.github/: pull_request_template.md
.github/agents/: AdaptiveAgent.agent.md
.github/instructions/: korean-agent.instructions.md
.github/prompts/: self-correct.prompt.md
.github/skills/tool-lib-manager/: SKILL.md
.github/workflows/: manual-llm-check.yml  pr-validation.yml
adaptive_agent/: CLAUDE.md  __init__.py  __main__.py  agent.py  cli.py  config.py  conversation.py  interactive_test_runner.py  logging.py  perspectives.py  response.py  router.py  sessions.py  state.py  tee_stream.py  test_runner.py
adaptive_agent/agents/: __init__.py  base.py  coder.py  critic.py  executor.py  librarian.py  plan.py  synthesizer.py
adaptive_agent/llms/: __init__.py  base.py  factory.py  gemini_client.py  ollama.py  openai_client.py  openrouter_client.py  usage.py
adaptive_agent/nodes/: __init__.py  base.py  coder.py  critic.py  execute.py  plan.py
adaptive_agent/prompts/: __init__.py  loader.py
adaptive_agent/prompts/default/: __init__.py  coder.txt  correction.txt  critic.txt  plan.txt  synthesize.txt
adaptive_agent/scenarios/: __init__.py  aavs.py  interactive.py
adaptive_agent/skills/: __init__.py  catalog.py  embedding.py
adaptive_agent/tools/: __init__.py  builtins.py  executor.py  models.py  registry.py  sandbox.py
docs/: adaptive_agent_validation_scenarios.md  architecture_blueprint.md  architecture_decision_log.md  basic_architecture_design.md  design_rationale.md  prompt_tuning_decisions.md  requirements_breakdown.md
docs/research/: README.md
scripts/: aavs_validate.py  start.sh
tests/: __init__.py  test_agent.py  test_artifact_and_web_fetch.py  test_builtin_tools.py  test_cli.py  test_conversation_history.py  test_critic_reflection_loop.py  test_docker_sandbox.py  test_embedding_search.py  test_librarian_and_catalog.py  test_llm_factory.py  test_llm_usage_tracking.py  test_openai_client.py  test_openai_routing.py  test_perspectives.py  test_prompts_contract.py  test_router_transitions.py  test_sessions_store.py  test_skill_dedup_phase1.py  test_skills_classification.py  test_streaming.py
